monitoring/namespace.yaml
# kube-prometheus-stack: node-exporter en Talos necesita pod security privileged
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
